--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -20,7 +20,9 @@
         </div>
         <div class="wui-i-body">
             <div class="wui-i-help_group">
-                <div class="wui-i-shop_circle"></div>
+                <div class="wui-i-shop_circle">
+                    <img src="">
+                </div>
                 <div class="wui-i-rules xa-rules">
                     <div class="wui-i-title xa-i-title">
                         <span class="wui-i-rules-title-content xa-i-rules-title-content">
