--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1442,6 +1442,10 @@ li.wui-selectBox-display-table {
     margin-top: 3px;
     margin-left: 3px;
 }
+
+.wui-red_packet-container .wui-i-help_group .wui-i-shop_circle img{
+    border-radius: 100px;
+}
 .wui-red_packet-container .wui-i-help_group .wui-i-rules{
     margin-top: 10px;
     font-weight: normal;
