成功弹窗x按钮，百分比气泡位置

--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -54,15 +54,15 @@
         background: no-repeat scroll 0 0 url("/termite_static/img/component/redpacket/success_msg.png");
         border-radius: 3px;
         left: 12%;
-        padding: 16% 10% 16% 9%;
+        padding: 18% 12% 20% 12%;
         position: fixed;
         top: 20%;
         width: 60%;
         height: 15%;
         z-index: 11111;
         text-align: center;
-        background-position: 5px -20px;
-        background-size: 85%;
+        background-position: 9px -11px;
+        background-size: 78%;
     }
     .xui-successHint{
         color:#3E1917;
@@ -84,9 +84,10 @@
         text-align: center;
         border-radius: 100px;
         position: relative;
-        left: 91%;
-        top: -141%;
+        left: 25px;
+        top: -30px;
         line-height: 30px;
+        float: right;
     }
     .xui-successHint .xui-i-intro_text {
         font-weight: bold;
@@ -545,11 +546,11 @@
     <div class="xui-powerSucceed xa-powerSucceed none">
         <div class="f15 xui-successHint xui-spritebg">
             <div style="display: inline-block;color: #333;width: 75%;">
+                <div class="wui-i-closebtn xa-i-closebtn">
+                    ×
+                </div>
                 <p class="xui-i-intro_text">您已为<span class="wa-pageownername">他</span>贡献</p>
                 <p class="xui-i-intro_num"><span class="xui-i-num">+</span><span class="xui-i-num wa-helpmoneynumber">0.00</span><span>元</span></p>
-            </div>
-            <div class="wui-i-closebtn xa-i-closebtn">
-                ×
             </div>
         </div>
     </div>
