--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1512,6 +1512,9 @@ li.wui-selectBox-display-table {
     margin-left: auto;
     margin-right: auto;
 }
+.wui-red_packet-container .wui-i-powerbar_group .wui-i-box{
+    height: 43px;
+}
 
 .wui-red_packet-container .wui-i-powerbar_group .wui-i-percentbox{
     font-size:smaller;
