--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -100,9 +100,9 @@
             <div class="wui-i-states">
                 <div class="wui-i-title" style="text-align: center;color:white;font-weight:normal;">
                     <span class="wui-i-helper-title-content">
-                        <hr style="height:1px;width:6rem;display:inline-block;border:none;border-top:1px solid #6C0000;" />
+                        <hr style="height:1px;width:34%;display:inline-block;border:none;border-top:1px solid #6C0000;" />
                         <b>已贡献好友</b>
-                        <hr style="height:1px;width:6rem;display:inline-block;border:none;border-top:1px solid #6C0000;" />
+                        <hr style="height:1px;width:34%;display:inline-block;border:none;border-top:1px solid #6C0000;" />
                     </span>
                 </div>
                 <div class="xui-top100 wa-top100">
