规则窗口，遮罩fix bug

--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -956,6 +956,7 @@
         $('.xui-attention').addClass('none');
         $('.xa-share').addClass('none');
         $('.xui-errMsg').addClass('none');
+        $('.xa-i-rules-contentbox').addClass('none');
     });
     $('.xa-closeBtn').click(function(){
         $('.xui-attention').addClass('none');
