--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
@@ -81,6 +81,10 @@
 	
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
+            <a href="/apps/red_packet/red_packet_setting/" class="btn btn-success fr ml25">
+				配置证书文件
+			</a>
+
 			<a href="/apps/red_packet/red_packet/" class="btn btn-success fr">
 				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建拼红包
 			</a>
