时分秒样式

--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -83,7 +83,7 @@
                     <b class="xa-second">{% if component.model.timing_value.second %}{{component.model.timing_value.second}}{% else %}59{% endif %}</b>
                 </div>
                 <div class="wui-i-timer-text">
-                    &nbsp &nbsp &nbsp 天 &nbsp &nbsp 时  &nbsp  &nbsp 分  &nbsp  &nbsp 秒
+                    <b>天</b>&nbsp<b>时</b>&nbsp<b>分</b>&nbsp<b>秒</b>
                 </div>
             </div>
             <div class="wui-i-btngroup">
