--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -777,10 +777,14 @@
     function runProcessBar(data){
         var red_packet_money = member_info.red_packet_money;
         var current_money = member_info.current_money;
-
-        var process = parseFloat(current_money/red_packet_money*100).toFixed(1)+"%";
-        if(process=="100.0%"){
-            process="100%";
+        var process = "0%";
+        if(red_packet_money==0){
+            process = "0%"
+        }else{
+            process = parseFloat(current_money/red_packet_money*100).toFixed(1)+"%";
+            if(process=="100.0%"){
+                process="100%";
+            }
         }
 
         $(".xa-i-percentbox").css("left",process);
