--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -670,7 +670,11 @@
             if(red_packet_status){
                 showSuccess();
             }
-            $('.wa-running').on('click', openGuideMask).show();
+            if(!W.isMember){
+                $('.wa-running').on('click', openGuestMask).show();
+            }else{
+                $('.wa-running').on('click', openGuideMask).show();
+            }
         }else{
             $('.wui-i-states').hide();
             $('.wa-running').hide();
