--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
@@ -136,7 +136,7 @@
 		</thead>
 		<tbody>
 		  {{each(i, item) items}}
-			<tr data-id="${item.id}" class="xa-selectTr">
+			<tr data-id="${item.id}" class="xa-selectTr" data-memberId="${item.member_id}">
 				<td class="tl pl25">
 					<img width=60 height=60 src="${item.participant_icon}" />
 					{{html item.participant_name}}
@@ -167,7 +167,7 @@
 				</td>
 				<td>
 					{{if (item.red_packet_status === '成功' && item.is_already_paid === '未发放')}}
-					<a href="javascript:void(0)" class="xa-pay" data-id=${item.id}>发放</a>
+					<a href="javascript:void(0)" class="xa-pay" data-id="${item.id}" data-memberId="${item.member_id}">发放</a>
 					{{/if}}
 				</td>
 			</tr>
@@ -186,6 +186,7 @@
 {% endverbatim %}
 
 <script type="text/javascript">
+var activityId = '{{activity_id}}';
 $(document).ready(function() {
 	$('body').delegate('.xa-viewData', 'click', function(event) {
 		var activityId = $(event.currentTarget).parents('tr').data('id');
@@ -254,7 +255,46 @@ $(document).ready(function() {
             }
         });
     });
+
+    //批量发红包
+    $('.xa-send-selected').on('click', function(){
+        var member_ids = [];
+        $('table').find('input:checkbox:checked').each(function(){
+            var $this = $(this);
+            member_ids.push($this.parents('tr').eq(0).attr('data-id'));
+        });
+        if(member_ids.length > 10){
+            W.showHint('info', '最多同时发放10个红包，多选的请下次发放~');
+            member_ids = member_ids.substr(0, 10);
+        }
+        pull_request(member_ids);
+    });
+    //单发红包
+    $('.xa-pay').on('click', function(){
+        var $this = $(this);
+        var member_id = $this.attr('data-memberId');
+        pull_request([member_id]);
+    });
 });
+
+function pull_request(member_ids){
+    W.getApi().call({
+        method: 'put',
+        app: 'apps/red_packet',
+        resource: 'red_packet_granter',
+        args: {
+            id: activityId,
+            member_ids: member_ids
+        },
+        success: function(resp){
+            W.showHint('info', "发放红包完成, 未发放成功的会员可能已经取消关注，请核实确认");
+            table.reload();
+        },
+        error: function(error){
+            console.log('发放失败');
+        }
+    });
+}
 </script>
 {% endblock %}
 
