个人按钮X位置

--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -39,8 +39,9 @@
         left: 40%;
         margin-left: 11px;
         position: absolute;
-        top: 60%;
+        /* top: 60%; */
         width: 50px;
+        margin-top: 20px;
     }
     /* 二维码的closeBtn */
     .xui-closeBtn {
