--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -46,13 +46,13 @@
             </div>
             <div class="wui-i-userinfo_group">
                 <div class="wui-i-avatar_group">
-                    <div class = "wui-i-avatar_circle xa-i-avatar_circle">
-                     <img src="">
+                    <div class = "wui-i-avatar_circle xa-i-avatar_circle" >
+                        <img style="border:0px" src="">
                     </div>
                 </div>
                 <div class = "wui-i-money_group">
                     <div class="wui-i-text">
-                        <p>当前金额</p>
+                        <p>总金额</p>
                     </div>
                     <div class="wui-i-money wa-i-current_money">
                         0.00元
@@ -69,7 +69,7 @@
                  <div class="wui-i-bar_process xa-i-bar_process"></div>
                 </div>
                 <div class="wui-i-power_money wa-i-red_packet_money">
-                    <p>总金额0.00元</p>
+                    <p>当前金额 0.00元</p>
                 </div>
             </div>
             <div style="display: none" class="wui-i-start_time">{{component.model.start_time}}</div>
