--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -623,11 +623,7 @@
             if(red_packet_status){
                 showSuccess();
             }
-            if(!W.isMember){
-                $('.wa-running').on('click', openGuestMask).show();
-            }else{
-                $('.wa-running').on('click', openGuideMask).show();
-            }
+            $('.wa-running').on('click', openGuideMask).show();
         }else{
             $('.wui-i-states').hide();
             $('.wa-running').hide();
@@ -655,7 +651,7 @@
                 if(is_helped){
                     $powerBtn.find('.wa-power-btn-action').html('已帮');
                     $powerBtn.on('click', function(){
-                        openGuestMask();
+                        openGuideMask();
                     }).show();
                 }else{
                     $powerBtn.find('.wa-power-btn-action').html('帮');
@@ -768,6 +764,9 @@
             $(".xa-i-percentbox").html(curr_process);
             return false;
         }else{
+            if(curr_process=="100.0%"){
+                curr_process="100%";
+            }
             curr_boxnum = curr_process;
             $(".xa-i-percentbox").html(curr_process);
             console.log('curr_boxnum:' + curr_boxnum+",curr_width:" + curr_width+",curr_process:" + curr_process);
@@ -862,12 +861,6 @@
         $('.xa-loadingFrame').addClass('none');
         $('.xa-redPacketMsg').find('.xa-i-msg').html('红包已被抢完啦</p><p>下次早点来哦');
     }
-    function openCompletedWin(){
-        mask('show');
-        $('.xa-redPacketMsg').removeClass('none');
-        $('.xa-loadingFrame').addClass('none');
-        $('.xa-redPacketMsg').find('.xa-i-msg').html('感谢你的支持</p><p>"'+page_owner_name+'"</p><p>已经拼红包成功');
-    }
     function showSuccess(){
         $('.xa-redpacket_success').removeClass('none');
     }
@@ -918,14 +911,8 @@
             error: function(data) {
                 if(data.errMsg){
                     if(data.errMsg != '只能点赞一次'){
-                        if(data.errMsg == '该用户已经完成拼红包'){
-                            openCompletedWin();
-                            is_helped = false;
-                        }else{
-                            wuiAlert(data.errMsg);
-                            is_helped = false;
-                         }
-
+                        wuiAlert(data.errMsg);
+                        is_helped = false;
                     }else{
                         if(!W.isMember){
                             $attention.find('.xa-attention-tip').show();
