--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -764,6 +764,9 @@
             $(".xa-i-percentbox").html(curr_process);
             return false;
         }else{
+            if(curr_process=="0.0%"){
+                curr_process="0%";
+            }
             if(curr_process=="100.0%"){
                 curr_process="100%";
             }
