当已帮好友点赞后，再次点击“已帮好友点赞”不再弹出帮好友分享黑色遮罩，弹出提示语“只能帮好友点赞一次”用默认弹层

--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -639,7 +639,7 @@
                 if(is_helped){
                     $powerBtn.find('.wa-power-btn-action').html('已帮');
                     $powerBtn.on('click', function(){
-                        openGuideMask();
+                        wuiAlert('只能帮好友点赞一次');
                     }).show();
                 }else{
                     $powerBtn.find('.wa-power-btn-action').html('帮');
