--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -515,12 +515,14 @@
     </div>
 
     <!-- 没有红包了的弹窗页面 -->
-    <div class="xui-powerSucceed xa-redPacketMsg none">
+    <div class="xui-powerSucceed xa-redPacketMsg">
         <div class="f15 xui-successHint xui-spritebg">
-            <p class="xui-i-msg xa-i-msg"></p>
-            <div class="wui-i-closebtn xa-i-closebtn">
-                ×
-            </div>
+            <div style="display: inline-block;color: #333;width: 75%;">
+                <div class="wui-i-closebtn xa-i-closebtn">
+                    ×
+                </div>
+                <p class="xui-i-msg xa-i-msg"></p>
+            <div/>
         </div>
     </div>
 
