--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -515,7 +515,7 @@
     </div>
 
     <!-- 没有红包了的弹窗页面 -->
-    <div class="xui-powerSucceed xa-redPacketMsg">
+    <div class="xui-powerSucceed xa-redPacketMsg none">
         <div class="f15 xui-successHint xui-spritebg">
             <div style="display: inline-block;color: #333;width: 75%;">
                 <div class="wui-i-closebtn xa-i-closebtn">
@@ -625,7 +625,11 @@
             if(red_packet_status){
                 showSuccess();
             }
-            $('.wa-running').on('click', openGuideMask).show();
+            if(!W.isMember){
+                $('.wa-running').on('click', openGuestMask).show();
+            }else{
+                $('.wa-running').on('click', openGuideMask).show();
+            }
         }else{
             $('.wui-i-states').hide();
             $('.wa-running').hide();
@@ -653,7 +657,7 @@
                 if(is_helped){
                     $powerBtn.find('.wa-power-btn-action').html('已帮');
                     $powerBtn.on('click', function(){
-                        openGuideMask();
+                        openGuestMask();
                     }).show();
                 }else{
                     $powerBtn.find('.wa-power-btn-action').html('帮');
@@ -866,6 +870,13 @@
         $('.xa-loadingFrame').addClass('none');
         $('.xa-redPacketMsg').find('.xa-i-msg').html('红包已被抢完啦</p><p>下次早点来哦');
     }
+    function openCompletedWin(){
+        mask('show');
+        $('.xa-redPacketMsg').removeClass('none');
+        $('.xa-loadingFrame').addClass('none');
+        $('.xa-redPacketMsg').find('.xa-i-msg').html('感谢你的支持</p><p>"'+page_owner_name+'"</p><p>已经拼红包成功');
+    }
+
     function showSuccess(){
         $('.xa-redpacket_success').removeClass('none');
     }
@@ -916,8 +927,13 @@
             error: function(data) {
                 if(data.errMsg){
                     if(data.errMsg != '只能点赞一次'){
-                        wuiAlert(data.errMsg);
-                        is_helped = false;
+                        if(data.errMsg == '该用户已经完成拼红包'){
+                            openCompletedWin();
+                            is_helped = false;
+                        }else{
+                            wuiAlert(data.errMsg);
+                            is_helped = false;
+                        }
                     }else{
                         if(!W.isMember){
                             $attention.find('.xa-attention-tip').show();
