5.当用户在关注状态时，给好友点赞完成后，点击“我也参与”按钮时，直接跳转到自己的专属页，不需要在弹出二维码。当用户没有关注时在走现在流程。

--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -674,12 +674,20 @@
                 }).show();
             }else{
                 using_msg = '我也要拼红包';
-                $('.wa-using').text(using_msg).on('click', function(){
-                    $attention.find('img').attr('src', qrcode_url);
-                    $attention.find('.xa-attention-tip').hide();
-                    $attention.find('.xa-attention-reply').children().first().html("2.回复：");
-                    openGuestMask();
-                }).show();
+                if(W.isMember){
+                    $('.wa-using').text(using_msg).on('click', function(){
+                        link = window.location.origin + '/m/apps/red_packet/m_red_packet/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId;
+                        console.log(link);
+                        window.open(link, '_tab');
+                    }).show();
+                }else{
+                    $('.wa-using').text(using_msg).on('click', function(){
+                        $attention.find('img').attr('src', qrcode_url);
+                        $attention.find('.xa-attention-tip').hide();
+                        $attention.find('.xa-attention-reply').children().first().html("2.回复：");
+                        openGuestMask();
+                    }).show();
+                }
             }
         }
 
