--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -641,7 +641,7 @@
                 if(is_helped){
                     $powerBtn.find('.wa-power-btn-action').html('已帮');
                     $powerBtn.on('click', function(){
-                        wuiAlert('只能帮好友点赞一次');
+                        showAlert();
                     }).show();
                 }else{
                     $powerBtn.find('.wa-power-btn-action').html('帮');
@@ -869,6 +869,7 @@
         mask('show');
         $('.xa-share').removeClass('none');
     }
+
     function openSuccessWin(){
         mask('show');
         $('.xa-powerSucceed').removeClass('none');
@@ -885,7 +886,9 @@
         $('.xa-loadingFrame').addClass('none');
         $('.xa-redPacketMsg').find('.xa-i-msg').html('感谢你的支持</p><p>"'+page_owner_name+'"</p><p>已经拼红包成功');
     }
-
+    function showAlert(){
+        wuiAlert('只能帮好友点赞一次');
+    }
     function showSuccess(){
         $('.xa-redpacket_success').removeClass('none');
     }
