--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -286,8 +286,8 @@
 			</div>
             <div class="form-group">
                 <label class="control-label col-sm-2 col-sm-offset-1">商品发票：</label>
-                <div class="col-sm-9" style="margin-top: -6px;">
-                    <label class="checkbox inline tx-checkbox-item" >
+                <div class="col-sm-9" style="margin-top: -6px;margin-left:-20px;">
+                    <label class="checkbox checkbox-inline tx-checkbox-item" >
                         <input
                             type='checkbox'
                             id='is_enable_bill'
@@ -302,8 +302,8 @@
             </div>
 		<div class="form-group">
 				<label class="control-label col-sm-2 col-sm-offset-1" for="is_delivery">配送时间：</label>
-				<div id='delivery_time' class="col-sm-9 " style="height:60px;">
-					<label class="checkbox xui-category">
+				<div id='delivery_time' class="col-sm-9 " style="height:60px;margin-left:-20px;">
+					<label class="checkbox checkbox-inline xui-category">
 						<input name="is_delivery" class="is_delivery_selected xui-inlineblock" type="checkbox" {% if product.is_delivery %}checked{% endif %} id="is_delivery">
 						<span class="xui-bold">需要</span>
 						<i class="xui-tips xa-tips" ></i>
