出去干扰，弹出框

--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -517,12 +517,10 @@
     <!-- 没有红包了的弹窗页面 -->
     <div class="xui-powerSucceed xa-redPacketMsg none">
         <div class="f15 xui-successHint xui-spritebg">
-            <div style="display: inline-block;color: #333;width: 75%;">
-                <div class="wui-i-closebtn xa-i-closebtn">
+                <div class="wui-i-closebtn xa-i-closebtn" style="left: 3px;">
                     ×
                 </div>
                 <p class="xui-i-msg xa-i-msg"></p>
-            <div/>
         </div>
     </div>
 
