--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -520,7 +520,7 @@
                 <div class="wui-i-closebtn xa-i-closebtn" style="left: 3px;">
                     ×
                 </div>
-                <p class="xui-i-msg xa-i-msg"></p>
+                <p class="xui-i-msg xa-i-msg" style="position: relative;left: -10px;"></p>
         </div>
     </div>
 
