--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -54,7 +54,7 @@
                     <div class="wui-i-text">
                         <p>总金额</p>
                     </div>
-                    <div class="wui-i-money wa-i-current_money">
+                    <div class="wui-i-money wa-i-red_packet_money">
                         0.00元
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                 <div class="wui-i-bar">
                  <div class="wui-i-bar_process xa-i-bar_process"></div>
                 </div>
-                <div class="wui-i-power_money wa-i-red_packet_money">
+                <div class="wui-i-power_money wa-i-current_money">
                     <p>当前金额 0.00元</p>
                 </div>
             </div>
