--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -660,7 +660,7 @@
                 }else{
                     $powerBtn.find('.wa-power-btn-action').html('帮');
                     $powerBtn.on('click', function(){
-                        powerYou();
+                        openGuestMask();
                     }).show();
                 }
             }
@@ -816,8 +816,8 @@
         member_info = data.member_info;
         red_packet_money = member_info.red_packet_money;
         current_money = member_info.current_money;
-        $('.wa-i-red_packet_money').text('当前金额 '+current_money+'元');
-        $('.wa-i-current_money').text(red_packet_money+'元');
+        $('.wa-i-current_money').text('当前金额 '+current_money+'元');
+        $('.wa-i-red_packet_money').text(red_packet_money+'元');
     }
 
     function showHelperInfo(data){
@@ -920,7 +920,13 @@
             },
             success: function(data) {
                 if (W.isMember) {
-                    $('.xui-successHint').find('.wa-helpmoneynumber').html(data.help_info.help_money);
+                    help_money = data.help_info.help_money;
+                    $('.xui-successHint').find('.wa-helpmoneynumber').html(help_money);
+                    //修改当前金额与帮助列表
+                    $('.wa-i-current_money').text('当前金额 '+data.help_info.current_money+'元');
+                    var li_content = '';
+                    li_content += "<div class='wui-i-friend'><div  class='wui-i-avatarbox'><div class='wui-i-avatar'><img src='"+ data.help_info.user_icon+"'></div></div><div class='wui-i-info'><li class='wui-i-money'>"+ help_money+"元</li><li class='wui-i-name'>"+ data.help_info.username+"</li></div></div>";
+                    $('.wa-top100').append($(li_content));
                     $('.wa-power').find('.wa-power-btn-action').html('已帮');
                     openSuccessWin();
                 }else{
